k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: obligatorio
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
    - name: https
      port: 443
      targetPort: 3443
      protocol: TCP
